fix: layout bug, delete user-select option

--- a/style.css
+++ b/style.css
@@ -2,15 +2,11 @@ body {
     background-color: #f7f6f4;
     color: #292929;
     font-family: Pretendard;
+    font-feature-settings: "tnum";
+    font-variant-numeric: tabular-nums;
     letter-spacing: -0.7px;
     margin: 0 auto;
-    
-    -ms-user-select: none; 
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-    
+
     animation: fadein ease 1.75s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -77,6 +73,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    overflow: hidden;
 }
 
 #shortcut {
